site on gh-pages is ready

--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,7 @@
         <meta name="twitter:card" content="summary"><!-- twitter openGraph -->
         <meta name="twitter:site" content="@site_account">
         <meta name="twitter:creator" content="@individual_account">
-        <meta name="twitter:url" content="http://Oregonwines.winespectator.com">
+        <meta name="twitter:url" content="http://oregonwineoffers.winespectator.com">
         <meta name="twitter:title" content="Discover Oregon Wine Country">
         <meta name="twitter:description" content="We can tell you that Oregon wine country will exceed your expectations — and it will — but you’ve got to visit to truly understand why. The personal welcome you’ll receive in our tasting rooms is only surpassed by the beauty you’ll discover in your glass. Request your free 2018 Oregon Wine Touring Guide at oregonwine.org/welcome.">
         <meta name="twitter:image" content="">
@@ -63,6 +63,18 @@
 	  	<link rel="stylesheet" type="text/css" href="/css/theme.css">
 	
 
+	    
+	    			<!-- Google Analytics -->
+	    <script>
+	        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	        // Change "addyoursite" the name of your web site
+	        ga('create', 'UA-23484466-40', 'oregonwineoffers.winespectator.com');
+	        ga('send', {"hitType":"pageview","page":"index", "section":"about"});
+	    </script>
+	    <!-- End Google Analytics -->
 	    
 	
 		<!--[if lt IE 9]>
