--- a/404.html
+++ b/404.html
@@ -28,14 +28,14 @@
         <meta name="msapplication-tooltip" content="We can tell you that Oregon wine country will exceed your expectations — and it will — but you’ve got to visit to truly understand why. The personal welcome you’ll receive in our tasting rooms is only surpassed by the beauty you’ll discover in your glass. Request your free 2018 Oregon Wine Touring Guide at oregonwine.org/welcome.">
         <meta name="theme-color" content="#ffffff">
         <meta name="msapplication-TileColor" content="#ffffff" />
-        <meta name="msapplication-TileImage" content="images/mstile-144x144.png">
+        <meta name="msapplication-TileImage" content="/images/mstile-144x144.png">
         <meta name="msapplication-square70x70logo" content="images/mstile70x70.png" />
         <meta name="msapplication-square150x150logo" content="images/mstile150x150.png" />
         <meta name="msapplication-wide310x150logo" content="images/mstile310x150.png" />
         <meta name="msapplication-square310x310logo" content="images/mstile300x300.png" />
         <meta name="msapplication-notification" content="frequency=30; polling-uri=notifications/contoso1.xml;polling-uri2=notifications/contoso2.xml; polling-uri3=notifications/contoso3.xml" />
 
-        <link rel="manifest" href="images/site.webmanifest">
+        <link rel="manifest" href="/images/site.webmanifest">
         
         <meta property="og:title" content="Discover Oregon Wine Country"><!-- facebook openGraph -->
         <meta property="og:description" content="We can tell you that Oregon wine country will exceed your expectations — and it will — but you’ve got to visit to truly understand why. The personal welcome you’ll receive in our tasting rooms is only surpassed by the beauty you’ll discover in your glass. Request your free 2018 Oregon Wine Touring Guide at oregonwine.org/welcome.">
@@ -53,7 +53,7 @@
         <link href="apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
         <link href="touch-icon-ipad.png" rel="apple-touch-icon" sizes="72x72">
         <link href="touch-icon-iphone4.png" rel="apple-touch-icon" sizes="114x114">
-        <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
         <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
         
         <title>Discover Oregon Wine Country</title>
