--- a/about/index.html
+++ b/about/index.html
@@ -60,7 +60,7 @@
         <!-- Place favicon.ico in the root directory -->
 
 			
-	  	<link rel="stylesheet" type="text/css" href="/css/theme.css">
+	  	<link rel="stylesheet" type="text/css" href="css/theme.css">
 	
 
 	    
@@ -78,10 +78,10 @@
 	    
 	
 		<!--[if lt IE 9]>
-	      <script src="/js/vendor/html5shiv.js"></script>
-	      <script src="/js/vendor/respond.src.js"></script>
+	      <script src="js/vendor/html5shiv.js"></script>
+	      <script src="js/vendor/respond.src.js"></script>
 	    <![endif]-->
-		<script src="/js/vendor/modernizr.js"></script>
+		<script src="js/vendor/modernizr.js"></script>
 		
 	</head>
 	
@@ -115,7 +115,7 @@
 			* For site performance it's suugested you all all your script tags here
 		 -->
 			
-  		<script src="/js/build.min.js"></script>
+  		<script src="js/build.min.js"></script>
 	
 
 	</body>
