updating fixes from master

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <div class="row vertical-divider animated slideInUp">
 	<div class="col-md-6 col-xl-4"><div class="card">
     <div class="row">
-        <p class="text-center vab d-none d-md-block"><a href="/\http://2hawk.orderport.net/wines/Current-Releases">Shop Now</a></p>
+        <p class="text-center vab d-none d-md-block"><a href="http://2hawk.orderport.net/wines/Current-Releases">Shop Now</a></p>
         <div class="col-8 col-lg-9 col-xl-8 align-self-center">
             <a href="http://2hawk.orderport.net/wines/Current-Releases"><img data-src="images/2HawkLogo.png" alt="2Hawk Vineyard & Winery" class="img-fluid"></a>
             <p class="card-text text-center">Enter WINESPEC2018 for 10% off your order (not including shipping).</p>
@@ -225,12 +225,12 @@
 </div>
 	<div class="col-md-6 col-xl-4"><div class="card">
     <div class="row">
-        <p class="text-center vab d-none d-md-block"><a href="www.reustlevineyards.com">Shop Now</a></p>
+        <p class="text-center vab d-none d-md-block"><a href="http://www.reustlevineyards.com">Shop Now</a></p>
         <div class="col-8 col-lg-9 col-xl-8 align-self-center">
             <a href="www.reustlevineyards.com"><img data-src="images/ReustleLogo.jpg" alt="Reaustle" class="img-fluid"></a>
             <p class="card-text text-center">Receive a 20% discount on orders using coupon code WS</p>
 
-            <p class="text-center ve"><a href="www.reustlevineyards.com">Shop Now</a></p>
+            <p class="text-center ve"><a href="http://www.reustlevineyards.com">Shop Now</a></p>
         </div>
         <div class="col-4 col-lg-3 col-xl-4">
             <a href="www.reustlevineyards.com"><img data-src="images/ReustleBottle.jpg" alt="Reaustle" class="img-fluid"></a>
@@ -348,7 +348,7 @@
         <p class="text-center vab d-none d-md-block"><a href="http://www.toriimorwinery.com/index.cfm?method=pages.showpage&pageID=CA0E6624-E0B7-8322-2809-562BE88B64C4">Shop Now</a></p>
         <div class="col-8 col-lg-9 col-xl-8 align-self-center">
             <a href="http://www.toriimorwinery.com/index.cfm?method=pages.showpage&pageID=CA0E6624-E0B7-8322-2809-562BE88B64C4"><img data-src="images/ToriiMorLogo.jpg" alt="Torii Mor Winery" class="img-fluid"></a>
-            <p class="card-text text-center">Experience Torri Mor with 15% off your purchase with code: WS2018.</p>
+            <p class="card-text text-center">Experience Torii Mor with 15% off your purchase with code: WS2018.</p>
 
             <p class="text-center ve"><a href="http://www.toriimorwinery.com/index.cfm?method=pages.showpage&pageID=CA0E6624-E0B7-8322-2809-562BE88B64C4">Shop Now</a></p>
         </div>
