--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
 </div>
 	<div class="col-md-6 col-xl-4"><div class="card">
     <div class="row">
-        <p class="text-center vab d-none d-md-block"><a href="http://www.elkcove.com">Shop Now</a></p>
+        <p class="text-center vab d-none d-md-block"><a href="https://shop.elkcove.com">Shop Now</a></p>
         <div class="col-8 col-lg-9 col-xl-8 align-self-center">
-            <a href="http://www.elkcove.com"><img data-src="images/ElkCoveLogo.png" alt="Elk Cove Vineyards" class="img-fluid"></a>
+            <a href="https://shop.elkcove.com"><img data-src="images/ElkCoveLogo.png" alt="Elk Cove Vineyards" class="img-fluid"></a>
             <p class="card-text text-center">Use code SPECT for complimentary shipping on your $100 purchase.</p>
 
-            <p class="text-center ve"><a href="http://www.elkcove.com">Shop Now</a></p>
+            <p class="text-center ve"><a href="https://shop.elkcove.com">Shop Now</a></p>
         </div>
         <div class="col-4 col-lg-3 col-xl-4">
-            <a href="http://www.elkcove.com"><img data-src="images/ElkCoveBottle.jpg" alt="Elk Cove Vineyards" class="img-fluid"></a>
+            <a href="https://shop.elkcove.com"><img data-src="images/ElkCoveBottle.jpg" alt="Elk Cove Vineyards" class="img-fluid"></a>
         </div>
     </div>
 </div>
@@ -227,13 +227,13 @@
     <div class="row">
         <p class="text-center vab d-none d-md-block"><a href="http://www.reustlevineyards.com">Shop Now</a></p>
         <div class="col-8 col-lg-9 col-xl-8 align-self-center">
-            <a href="www.reustlevineyards.com"><img data-src="images/ReustleLogo.jpg" alt="Reaustle" class="img-fluid"></a>
+            <a href="http://www.reustlevineyards.com"><img data-src="images/ReustleLogo.jpg" alt="Reaustle" class="img-fluid"></a>
             <p class="card-text text-center">Receive a 20% discount on orders using coupon code WS</p>
 
             <p class="text-center ve"><a href="http://www.reustlevineyards.com">Shop Now</a></p>
         </div>
         <div class="col-4 col-lg-3 col-xl-4">
-            <a href="www.reustlevineyards.com"><img data-src="images/ReustleBottle.jpg" alt="Reaustle" class="img-fluid"></a>
+            <a href="http://www.reustlevineyards.com"><img data-src="images/ReustleBottle.jpg" alt="Reaustle" class="img-fluid"></a>
         </div>
     </div>
 </div>
