updating from master

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <a href="http://2hawk.orderport.net/wines/Current-Releases"><img data-src="images/2HawkLogo.png" alt="2Hawk Vineyard & Winery" class="img-fluid"></a>
             <p class="card-text text-center">Enter WINESPEC2018 for 10% off your order (not including shipping).</p>
 
-            <p class="text-center ve"><a href="/\http://2hawk.orderport.net/wines/Current-Releases">Shop Now</a></p>
+            <p class="text-center ve"><a href="http://2hawk.orderport.net/wines/Current-Releases">Shop Now</a></p>
         </div>
         <div class="col-4 col-lg-3 col-xl-4">
             <a href="http://2hawk.orderport.net/wines/Current-Releases"><img data-src="images/2HawkBottle.jpg" alt="2Hawk Vineyard & Winery" class="img-fluid"></a>
